fix: emoji not showing using img instead

--- a/src/components/CityCard.module.css
+++ b/src/components/CityCard.module.css
@@ -20,9 +20,9 @@
   border-left: 5px solid var(--color-brand--2);
 }
 
-.emoji {
-  font-size: 2.6rem;
-  line-height: 1;
+.emoji-img {
+  width: 1.2rem;
+  height: 1.2rem;
 }
 
 .name {
