--- a/src/components/CountryCard.module.css
+++ b/src/components/CountryCard.module.css
@@ -13,6 +13,10 @@
   border-left: 5px solid var(--color-brand--1);
 }
 
+.countryItem img {
+  width: 2.4rem;
+  padding-bottom: 1.2rem;
+}
 .countryItem span:first-child {
   font-size: 3rem;
   line-height: 1;
